yaml_parser/tests/fail/wrong-indendation-in-sequence.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 4, column 3
  |
4 |   - wrong
  |   ^
invalid indentation
